--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,9 @@
 	<main class="flex-spaced column grow-l">
 		<section class="grow-l container">
 			<input class="hidden" id="toggle-fav" name="nav-toggle" type="radio" checked/>
-			<article class="t-hidden" id="fav-nav">fav</article>
+			<article class="t-hidden" id="fav-nav">
+			  <ul id="fav-list"></ul>
+			</article>
 
 			<input class="hidden" id="toggle-radio" name="nav-toggle" type="radio"/>
 			<article class="t-hidden flex-spaced column" id="radio-nav">
@@ -66,8 +68,8 @@
 				<h4>Source Info</h4>
 			</article>
 			<ul class="flex-center column" id="audio-controls">
-				<li class="flex-center grow-l"><input type="range" max="10" value="5"/></li>
-				<li>&#128264;&#9887;</li>
+				<li class="flex-center grow-l"><input id="vol-slider" type="range" max="10" value="5"/></li>
+				<li>&#128264;</li>
 			</ul>
 		</section>
 	</main>
